force-app/main/default/objects/VO_Survey__c/fields/TechAfterSalesScoringFormula__c.field-meta.xml
<CustomField>
    <fullName>TechAfterSalesScoringFormula__c</fullName>
    <description>Formula to compute the scoring before insert and after update</description>
    <formula>&quot;FORMULA NO MORE USED - TO BE DELETED&quot;
/* 
IF( 
(
IF(ISNUMBER(Q07Answer__c),VALUE(Q07Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q08Answer__c),VALUE(Q08Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q09Answer__c),VALUE(Q09Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q10Answer__c),VALUE(Q10Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q11Answer__c),VALUE(Q11Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q12Answer__c),VALUE(Q12Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q13Answer__c),VALUE(Q13Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q14Answer__c),VALUE(Q14Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q15Answer__c),VALUE(Q15Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q16Answer__c),VALUE(Q16Answer__c) &lt; 7,false) 
) 
&amp;&amp; 
(
IF(ISNUMBER(Q02Answer__c),VALUE(Q02Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q03Answer__c),VALUE(Q03Answer__c) &lt; 7,false) 
), 
&quot;Recovery Act&quot;, 
IF( 
IF(ISNUMBER(Q03Answer__c),VALUE(Q03Answer__c) &gt; 8,false), 
&quot;Promoter&quot;, 
&quot;Neutral&quot; 
) 
)
*/</formula>
    <label>Tech AfterSales Scoring Formula</label>
    <type>Text</type>
</CustomField>