force-app/main/default/objects/VO_Survey__c/fields/TechPurchProductKey__c.field-meta.xml
<CustomField>
    <fullName>TechPurchProductKey__c</fullName>
    <description>composite key concatenating IDTransaction__c, ClientDreamID__c, and StoreID__c fields</description>
    <formula>IDTransaction__c +  ClientDreamID__c +  IF( ISPICKVAL(SurveyType__c , &apos;VO EO Sales&apos;), STOREORDER__c, Store__r.RetailStoreId__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TechPurchProductKey</label>
    <type>Text</type>
</CustomField>