force-app/main/default/objects/VO_Survey__c/fields/TechSalesScoringFormula__c.field-meta.xml
<CustomField>
    <fullName>TechSalesScoringFormula__c</fullName>
    <description>Formula to compute the scoring before insert and after update</description>
    <formula>Tech_Sales_Scoring_Formula__c</formula>
    <label>Tech Sales Scoring Formula</label>
    <type>Text</type>
</CustomField>