force-app/main/default/objects/VO_Survey__c/fields/TECHStore_Delivery_del__c.field-meta.xml
<CustomField>
    <fullName>TECHStore_Delivery_del__c</fullName>
    <description>Champs contenant le le code du store delivery et le nom du magasin (concaténation)</description>
    <label>TECH Store Delivery</label>
    <length>80</length>
    <type>Text</type>
</CustomField>