force-app/main/default/objects/VO_Survey__c/fields/TechWebScoringFormula__c.field-meta.xml
<CustomField>
    <fullName>TechWebScoringFormula__c</fullName>
    <description>Formula to compute the scoring before insert and after update</description>
    <formula>&quot;FORMULA NO MORE USED - TO BE DELETED&quot;
/*
IF( 
(IF(ISNUMBER(Q02Answer__c),VALUE(Q02Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q03Answer__c),VALUE(Q03Answer__c) &lt; 7,false))
&amp;&amp;
( 
IF(ISNUMBER(Q05Answer__c),VALUE(Q05Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q06Answer__c),VALUE(Q06Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q07Answer__c),VALUE(Q07Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q08Answer__c),VALUE(Q08Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q09Answer__c),VALUE(Q09Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q10Answer__c),VALUE(Q10Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q11Answer__c),VALUE(Q11Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q12Answer__c),VALUE(Q12Answer__c) &lt; 7,false) 
|| 
Q13Answer__c =&quot;No&quot;
|| 
Q14Answer__c =&quot;No&quot;
|| 
IF(ISNUMBER(Q15Answer__c),VALUE(Q15Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q16Answer__c),VALUE(Q16Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q17Answer__c),VALUE(Q17Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q18Answer__c),VALUE(Q18Answer__c) &lt; 7,false) 
|| 
IF(ISNUMBER(Q19Answer__c),VALUE(Q19Answer__c) &lt; 7,false) ), 
&quot;Recovery Act&quot;, 
IF( 
Q03Answer__c =&quot;10&quot;
&amp;&amp; 
Q02Answer__c =&quot;10&quot;
&amp;&amp; 
(Q05Answer__c =&quot;09&quot; || Q05Answer__c =&quot;10&quot;)
&amp;&amp; 
(Q06Answer__c =&quot;09&quot; || Q06Answer__c =&quot;10&quot;)
&amp;&amp; 
(Q07Answer__c =&quot;09&quot; || Q07Answer__c =&quot;10&quot;)
&amp;&amp;
(Q08Answer__c =&quot;09&quot; || Q08Answer__c =&quot;10&quot;)
&amp;&amp; 
(Q09Answer__c =&quot;09&quot; || Q09Answer__c =&quot;10&quot;)
&amp;&amp;
(Q10Answer__c =&quot;09&quot; || Q10Answer__c =&quot;10&quot;)
&amp;&amp; 
(Q11Answer__c =&quot;09&quot; || Q11Answer__c =&quot;10&quot;)
&amp;&amp; 
(Q12Answer__c =&quot;09&quot; || Q12Answer__c =&quot;10&quot;)
&amp;&amp; 
Q13Answer__c =&quot;Yes&quot; 
&amp;&amp; 
Q14Answer__c =&quot;Yes&quot; 
&amp;&amp; 
(Q15Answer__c =&quot;09&quot; || Q15Answer__c =&quot;10&quot;)
&amp;&amp; 
(Q16Answer__c =&quot;09&quot; || Q16Answer__c =&quot;10&quot;)
&amp;&amp; 
(Q17Answer__c =&quot;09&quot; || Q17Answer__c =&quot;10&quot;)
&amp;&amp; 
( Q18Answer__c =&quot;N/A&quot;  || Q18Answer__c =&quot;09&quot; || Q18Answer__c =&quot;10&quot;)
&amp;&amp; 
( Q19Answer__c =&quot;N/A&quot; || Q19Answer__c =&quot;09&quot; || Q19Answer__c =&quot;10&quot;), 
&quot;Delighted Client&quot;,  
IF(
(Q03Answer__c =&quot;09&quot;|| Q03Answer__c =&quot;10&quot;), &quot;Promoter&quot;, 
&quot;Neutral&quot;) 
)
)
*/</formula>
    <label>Tech Web Scoring Formula</label>
    <type>Text</type>
</CustomField>