force-app/main/default/objects/VO_Survey__c/fields/TransactionProductCategoryCode__c.field-meta.xml
<CustomField>
    <fullName>TransactionProductCategoryCode__c</fullName>
    <description>Denormalized data from Purchased Products --&gt; sent by Clicktools</description>
    <label>Product Category Code(s)</label>
    <type>TextArea</type>
</CustomField>