force-app/main/default/objects/VO_Survey__c/fields/TransactionPurchasedDate__c.field-meta.xml
<CustomField>
    <fullName>TransactionPurchasedDate__c</fullName>
    <label>Purchased Date</label>
    <type>Date</type>
</CustomField>