force-app/main/default/objects/VO_Survey__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Promoter</fullName>
            </value>
            <value>
                <fullName>Recovery Act</fullName>
            </value>
            <value>
                <fullName>Delighted Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>